# jsl

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  COMPLETE_TEST_SUMMARY.md  FINAL_TEST_SUMMARY.md  Makefile  README.md  TODO.md  UNIT_TEST_FIX_SUMMARY.md  __init__.py  index.html  jsl-extended.py  jsl.py  json.json  mkdocs.yml  newton-new.json  objects.inv  prog-new.json  prog3.json  prog4.json  prog5.json  prog6.json  prog7.json  prog8.json  pyproject.toml  service.py  sitemap.xml  test.json  test.txt  test_debug2.py  test_debug_resumption.py  test_def_lambda.py  test_env_debug.py  test_env_resumption.py  test_find_function.py  test_full_state.py  test_resumption_works.py  test_step_by_step.py  test_whole_dict.py
JPN_DICTIONARY_FORMAT/: index.html
JPN_DICTIONARY_IMPLEMENTATION_SUMMARY/: index.html
JSON_MANIPULATION_PROPOSAL/: index.html
JSON_OPERATIONS/: index.html
api/compiler/: index.html
api/core/: index.html
api/evaluator/: index.html
api/fluent/: index.html
api/runner/: index.html
api/serialization/: index.html
api/stack-evaluator/: index.html
architecture/abstract-machine/: index.html
architecture/distributed/: index.html
architecture/evaluator-parity/: index.html
architecture/json-manipulation-proposal/: index.html
architecture/network/: index.html
architecture/performance/: index.html
architecture/philosophy/: index.html
architecture/runtime/: index.html
architecture/security/: index.html
architecture/serialization/: index.html
architecture/stack-evaluation/: index.html
docs/: JPN_DICTIONARY_FORMAT.md  JSON_MANIPULATION_PROPOSAL.md  JSON_OPERATIONS.md  getting-started.md  index.md
docs/api/: compiler.md  core.md  evaluator.md  fluent.md  runner.md  serialization.md  service.md  stack-evaluator.md
docs/architecture/: abstract-machine.md  distributed.md  evaluator-parity.md  jpn-implementation.md  network.md  performance.md  philosophy.md  runtime.md  security.md  serialization.md  stack-evaluation.md
docs/examples/: advanced.md  group-by.md  practical.md  (+2 more)
examples/: data_processing.jsl  factorial.jsl  group_by_example.py  higher_order.jsl  jpn_demo.py  step_accounting.py
getting-started/: index.html
integrations/: README.md
jsl/: __init__.py  cli.py  compiler.py  core copy.py  core.py  eval_modes.py  evaluator.py  fluent.py  jsl.py  jsl_host_dispatcher.py  modules.py  prelude.py  resource_wrapped.py  resources.py  runner.py  serialization-backup.py  serialization.py  service.py  sexp.py  stack_evaluator.py  stack_special_forms.py
scripts/: mkdocs-to-md.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: __init__.py  test_both_evaluators.py  test_compiler_roundtrip.py  test_core.py  test_cycle_serialization.py  test_env_deepcopy.py  test_env_equality.py  test_examples.py  test_fluent.py  test_group_by.py  test_jsl.py  test_jsl_advanced.py  test_jsl_extended.py  test_jsl_serialization.py  test_objects.py  test_path_navigation.py  test_prelude_id.py  test_public_api.py  test_query_transform.py  test_regex.py  test_runner.py  test_serialization.py  test_stack_evaluator.py  test_stack_serialization.py  test_stack_with_existing.py  test_step_limiting.py  test_unified_evaluators.py  test_where_transform.py
(+81 files in other folders)
