[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jsl-lang"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "JSL (JSON Serializable Language) - A Network-Native Functional Language."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
  # Core dependencies if any, otherwise empty
]

[project.optional-dependencies]
service = [
  "fastapi>=0.100.0", # Specify versions as appropriate
  "uvicorn[standard]>=0.20.0", # [standard] includes common extras for uvicorn
]
all = [ # Allows installing all optional dependencies
  "jsl-lang[service]",
]


[project.urls]
Homepage = "https://github.com/yourusername/jsl"
Repository = "https://github.com/yourusername/jsl"

[project.scripts]
jsl = "jsl.jsl:main"
jsl-service = "jsl.service:start_service" # New script for the service

[tool.setuptools.packages.find]
where = ["."]
include = ["jsl*"]
exclude = ["dev*", "__pycache__*"]

[tool.setuptools.package-data]
jsl = ["modules/*.json"]